Add Resend integration for email notifications and remove Nodemailer setup

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mongoose": "^9.2.1",
     "multer": "^2.0.2",
     "nodemailer": "^8.0.1",
-    "razorpay": "^2.9.6"
+    "razorpay": "^2.9.6",
+    "resend": "^6.9.2"
   }
 }
