feat: Add Header, Footer, and Main Layout components; implement responsive design and navigation features
feat: Create SideCategory component for category navigation with overlay effect

feat: Implement Account page for user profile management and address handling

feat: Develop Cart page with item management and order summary

feat: Add Checkout page for payment processing and order confirmation

feat: Create Orders page to display user's past orders

feat: Implement Success page for order confirmation feedback

feat: Develop Wishlist page for saving favorite products

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "multer": "^2.0.2",
     "nodemailer": "^8.0.1",
     "razorpay": "^2.9.6",
+    "react-icons": "^5.5.0",
     "resend": "^6.9.2"
   }
 }
