--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,9 +13,10 @@
     "axios": "^1.13.5",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.13.0",
-    "sweetalert2": "^11.26.18",
+    "sweetalert2": "^11.26.20",
     "swiper": "^12.1.2"
   },
   "devDependencies": {
